// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pickAnswer form should match the snapshot, button title should be: 'Finish' 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    Answers
    <div>
      <label>
        <input
          checked={false}
          className="radioInput"
          name="answer"
          onBlur={[Function]}
          onChange={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          type="radio"
          value="test"
        />
        test
      </label>
    </div>
    <div>
      <label>
        <input
          checked={false}
          className="radioInput"
          name="answer"
          onBlur={[Function]}
          onChange={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          type="radio"
          value="test2"
        />
        test2
      </label>
    </div>
    <button
      className="submit"
      disabled={true}
    >
      Finish
    </button>
    <button
      className="submit"
      onClick={[Function]}
    >
      Quit
    </button>
  </form>
</div>
`;

exports[`pickAnswer form should match the snapshot, button title should be: 'Next Question' 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    Answers
    <div>
      <label>
        <input
          checked={false}
          className="radioInput"
          name="answer"
          onBlur={[Function]}
          onChange={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          type="radio"
          value="test"
        />
        test
      </label>
    </div>
    <div>
      <label>
        <input
          checked={false}
          className="radioInput"
          name="answer"
          onBlur={[Function]}
          onChange={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          type="radio"
          value="test2"
        />
        test2
      </label>
    </div>
    <button
      className="submit"
      disabled={true}
    >
      Next Question
    </button>
    <button
      className="submit"
      onClick={[Function]}
    >
      Quit
    </button>
  </form>
</div>
`;
